--- a/admin-general-agregar.html
+++ b/admin-general-agregar.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="styles/style-admin.css">
     <script>
         function fun(af){
+            log();
             return"";
         }
     </script>
