--- a/inicio.html
+++ b/inicio.html
@@ -123,7 +123,7 @@
       <div class="contenido">
         <div class="sec1 shadow-lg p-3 mb-5 bg-body rounded">
           <div class="video">
-            <iframe width="70%" height="100%" src="https://www.youtube.com/embed/_Kh7zwStl-s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="70%" height="100%" src="https://www.youtube.com/embed/_Kh7zwStl-s?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="texto">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quaerat et vero eaque illo dolorem, amet, alias delectus nisi earum quos odio perferendis assumenda doloremque tenetur quisquam accusamus aperiam quidem.</p>
@@ -131,7 +131,7 @@
         </div>
         <div class="sec2 shadow-lg p-3 mb-5 bg-body rounded">
           <div class="video2">
-            <iframe width="70%" height="100%" src="https://www.youtube.com/embed/_Kh7zwStl-s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9QNUXxuwt1Y?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="texto2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quaerat et vero eaque illo dolorem, amet, alias delectus nisi earum quos odio perferendis assumenda doloremque tenetur quisquam accusamus aperiam quidem.</p>
