--- a/inicio.html
+++ b/inicio.html
@@ -75,9 +75,9 @@
             <div class="carousel-item active" data-bs-interval="10000">
               <img src="img/img-1.jpg" class="d-block w-100" alt="..." />
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
+                <h5>¿A donde quieres viajar?</h5>
                 <p>
-                  Some representative placeholder content for the first slide.
+                  Quien bien te quiera, te hará viajar
                 </p>
               </div>
             </div>
@@ -123,18 +123,18 @@
       <div class="contenido">
         <div class="sec1 shadow-lg p-3 mb-5 bg-body rounded">
           <div class="video">
-            <iframe width="70%" height="100%" src="https://www.youtube.com/embed/_Kh7zwStl-s?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/sw7463aYB5k?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="texto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quaerat et vero eaque illo dolorem, amet, alias delectus nisi earum quos odio perferendis assumenda doloremque tenetur quisquam accusamus aperiam quidem.</p>
+            <p>"Los viajes son en la juventud una parte de educación y, en la vejez, una parte de experiencia." Francis Bacon </p>
           </div>
         </div>
         <div class="sec2 shadow-lg p-3 mb-5 bg-body rounded">
           <div class="video2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/9QNUXxuwt1Y?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nOBv6JRvTb4?autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="texto2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus quaerat et vero eaque illo dolorem, amet, alias delectus nisi earum quos odio perferendis assumenda doloremque tenetur quisquam accusamus aperiam quidem.</p>
+            <p>“El auténtico viaje es ir. Una vez se ha llegado, se acaba el viaje. Hoy día, la gente comienza por el final.” Hugo Verlomme </p>
           </div>
         </div>
         <div class="mapa">
