--- a/inicio.html
+++ b/inicio.html
@@ -21,7 +21,7 @@
     <header>
       <nav class="cab navbar navbar-expand-lg navbar-dark p-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">UPIITRAVEL</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,9 +35,12 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link" href="#">Vuelos</a>
+              <a class="nav-link" href="#">Alojamientos</a>
+              <a class="nav-link" href="#">Paquetes</a>
             </div>
+            <div id="div12" class="cses"><a  href="index.php">Cerrar sesion</a></div>
           </div>
         </div>
       </nav>
@@ -73,7 +76,7 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img src="img/img-1.jpg" class="d-block w-100" alt="..." />
+              <img src="img/playa.jpg" class="d-block w-100 car-item-custom" alt="..." />
               <div class="carousel-caption d-none d-md-block">
                 <h5>¿A donde quieres viajar?</h5>
                 <p>
@@ -82,7 +85,7 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="10000">
-              <img src="img/img-1.jpg" class="d-block w-100" alt="..." />
+              <img src="img/img-1.jpg" class="d-block w-100 car-item-custom" alt="..." />
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>
@@ -91,7 +94,7 @@
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="10000">
-              <img src="img/img-1.jpg" class="d-block w-100" alt="..." />
+              <img src="img/img-1.jpg" class="d-block w-100 car-item-custom" alt="..." />
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>
