--- a/admin-general-agregar.html
+++ b/admin-general-agregar.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello, world!</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.16/dist/css/bootstrap-select.min.css">
 	<link rel="stylesheet" href="styles/style-admin.css">
 </head>
 
@@ -35,52 +36,41 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="jumbotron">
-                    <form>
-                        <div class="form-row">
-                          <div class="col-4">
-							<div class="input-group input-group-lg">
-								<div class="input-group-prepend">
-									<span class="input-group-text" id="input-destino-general">Destino: </span>
-								</div>
-								<input type="text" class="form-control" aria-label="Large" aria-describedby="input-destino-general" placeholder="Destino">
-							</div>
-                          </div>
-                          <div class="col">
-                              <!-- Fechas Entrada/salida -->
-                            <div class="input-group input-group-lg">
-								<div class="input-group-prepend">
-									<span class="input-group-text" id="input-entrada-general">Entrada: </span>
-								</div>
-								<div class="input-group date" data-provide="datepicker">
-									<input type="text" class="form-control" aria-label="Large" aria-describedby="input-entrada-general">
-									<div class="input-group-addon">
-										<span class="glyphicon glyphicon-th"></span>
-									</div>
-								</div>
-
-								<div class="input-group-prepend">
-									<span class="input-group-text" id="input-salida-general">Salida: </span>
-								</div>
-								<div class="input-group date" data-provide="datepicker">
-									<input type="text" class="form-control" aria-label="Large" aria-describedby="input-salida-general">
-									<div class="input-group-addon">
-										<span class="glyphicon glyphicon-th"></span>
-									</div>
-								</div>
-							</div>
-                          </div>
-                          <div class="col">
-                            <div class="input-group input-group-lg">
-								<div class="input-group-prepend">
-									<span class="input-group-text" id="input-personas-general"></span>
-								</div>
-								<input type="text" class="form-control" aria-label="Large" aria-describedby="input-personas-general" placeholder="">
-							</div>
-                          </div>
+                <form>
+                    <div class="input-group ">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="input-salida-general">Destino</span>
                         </div>
-                      </form>
-                </div>
+                        <select class="selectpicker" data-live-search="true">
+                            <!-- <option >Hot Dog</option>
+                            <option >Burger, Shake Smile</option>
+                            <option >All things nice</option> -->
+                            <option data-tokens="ketchup mustard">Hot Dog</option>
+                            <option data-tokens="ketchup mustard">Soda</option>
+                            <option data-tokens="ketchup mustard">Fries</option>
+                            <option data-tokens="mustard">Burger, Shake Smile</option>
+                            <option data-tokens="frosting">Sugar</option>
+                            <option data-tokens="frosting">All things nice</option>
+                        </select>
+
+                    
+                        <!-- Fechas Entrada/salida -->
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="input-entrada-general">Entrada</span>
+                        </div>
+                        <input type="date" class="form-control">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="input-salida-general">Salida</span>
+                        </div>
+                        <input type="date" class="form-control">
+                        <!-- Numero Personas -->
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="input-personas-general">Personas</span>
+                        </div>
+                        <input type="number" class="form-control" aria-label="Large" aria-describedby="input-personas-general" placeholder="" min="1" />						
+                        
+                    </div>
+                </form>
 
                 <div class="block">
                     <p><h1>Agregar un departamento</h1></p>
@@ -108,11 +98,19 @@
         </div>
     </div>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.16/dist/js/bootstrap-select.min.js"></script>
 	<script type="text/javascript">
-		$('.datepicker').datepicker({inline: true});
+		$('#fecha-salida').datepicker({
+				format: 'dd/mm/yyyy',
+				formatSubmit: 'yyyy/mm/dd'
+			});
 	</script>
 </body>
 </html>
