--- a/admin-general-agregar.html
+++ b/admin-general-agregar.html
@@ -8,33 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.16/dist/css/bootstrap-select.min.css">
 	<link rel="stylesheet" href="styles/style-admin.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <div class="navegacion">
-            <ul class="in">
-                <li><a href="admin-perfil-crear.php">- Menu -</a></li>
-                <li><a href="admin-general-agregar.php">Reservas</a></li>
-            </ul>
-        </div>
-        <div class="container">
-            <div class="inner">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a style="border: 1px solid grey;" class="nav-link link-dark" aria-current="page" href="admin-general-agregar.php">Alojamiento</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link link-dark" href="admin-general-rating.php">Vuelos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link link-dark" href="admin-general-reportes.php">Paquetes</a>
-                    </li>
-                </ul>
-            </div>
             <div class="content">
                 <form>
                     <div class="input-group ">
@@ -42,9 +22,6 @@
                             <span class="input-group-text" id="input-salida-general">Destino</span>
                         </div>
                         <select class="selectpicker" data-live-search="true">
-                            <!-- <option >Hot Dog</option>
-                            <option >Burger, Shake Smile</option>
-                            <option >All things nice</option> -->
                             <option data-tokens="ketchup mustard">Hot Dog</option>
                             <option data-tokens="ketchup mustard">Soda</option>
                             <option data-tokens="ketchup mustard">Fries</option>
@@ -71,29 +48,6 @@
                         
                     </div>
                 </form>
-
-                <div class="block">
-                    <p><h1>Agregar un departamento</h1></p>
-                    <p><h3>Nombre del nuevo departamento</h3></p>
-                    <form action="depto/altas.php" method="post">
-                    <input class="form-control form-control-lg" value="" name="Nombre" type="text" placeholder="Nuevo" aria-label=".form-control-lg example">
-                    <br>
-                    <button name="" value="Guardar" type="submit" class="btn btn-outline-secondary">Crear</button>
-                    </form>
-                    <br><br>
-                    <p><h2>Departamentos existentes</h2></p>
-                    <ul class="list-group" name="ag">
-                    <?php
-                                  include("conexion.php");
-                                  $consulta = "SELECT * FROM Departamento";
-                                  $ejecutar = sqlsrv_query ($con, $consulta);
-                                   while($fila=sqlsrv_fetch_array($ejecutar)){
-                                   $id=$fila['Nombre'];
-                                   echo "<li>".$fila['Nombre']."</li>";
-                                 } 
-                    ?> 
-                      </ul>
-                </div>
             </div>
         </div>
     </div>
